<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_linear"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="left"
		android:textColor="@color/top_blue"
		android:textSize="20dp"
		android:text="@string/prompt"
		android:layout_margin="10dp"
		android:paddingLeft="10dp"
        />
    <View 
        android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/top_blue"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginBottom="10dp"
        />
    <TextView 
        android:id="@+id/tip_text"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="@color/gray7"
		android:text="@string/areyouexit"
		android:textSize="18sp"
		android:layout_margin="10dp"
		android:paddingLeft="10dp"
        />
    <View 
        android:layout_width="match_parent"
		android:layout_height="1px"
		android:background="@color/gray4"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
        />
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
    <Button 
        android:id="@+id/y_button"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:padding="10dp"
    	android:textSize="18dp"
    	android:textColor="@color/top_blue"
    	android:text="@string/sure"
    	android:background="@color/white"
    	android:layout_marginLeft="10dp"
        />
    <View 
        android:layout_width="1px"
		android:layout_height="20dp"
		android:background="@color/gray4"
		android:layout_gravity="center"
        />
    <Button 
        android:id="@+id/n_button"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:textSize="18dp"
    	android:textColor="@color/bottom_text"
    	android:padding="10dp"
    	android:text="@string/cancle"
    	android:background="@color/white"
    	android:layout_marginRight="10dp"
        />

    </LinearLayout>

</LinearLayout>
