<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textColor="@color/top_blue"
		android:textSize="@dimen/bigsize"
		android:text="@string/checknew"
		android:layout_margin="10dp"
        />
    <View 
        android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/top_blue"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
        />
    <ScrollView 
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:scrollbarStyle="outsideOverlay"
        >
    <TextView 
        android:id="@+id/version_info"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="@color/gray7"
		android:textSize="@dimen/normalsize"
		android:layout_margin="10dp"
        />
    </ScrollView>
    <View 
        android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/top_blue"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
        />
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
        >
    <Button 
        android:id="@+id/u_button"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:padding="10dp"
    	android:textSize="@dimen/normalsize"
    	android:textColor="@color/top_blue"
    	android:text="@string/updatenow"
    	android:background="@color/transparent"
        />
    <View 
        android:layout_width="1dp"
		android:layout_height="18dp"
		android:background="@color/top_blue"
		android:layout_gravity="center"
        />
    <Button 
        android:id="@+id/nu_button"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:textSize="@dimen/normalsize"
    	android:textColor="@color/bottom_text"
    	android:padding="10dp"
    	android:text="@string/noupdatenow"
    	android:background="@color/transparent"
        />

    </LinearLayout>

</LinearLayout>
